--- a/cart/build.gradle
+++ b/cart/build.gradle
@@ -7,7 +7,7 @@ group 'com.ruppyrup'
 version '0.0.1-SNAPSHOT'
 
 dependencies {
-
+    implementation project (':models')
 }
 
 mainClassName = 'cart.CartApplication'
