--- a/shop/build.gradle
+++ b/shop/build.gradle
@@ -8,6 +8,10 @@ version '0.0.1-SNAPSHOT'
 
 dependencies {
     implementation project (':models')
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.webjars:bootstrap:5.1.3'
+    implementation 'org.webjars:jquery:3.6.0'
 }
 
 mainClassName = 'shop.ShopApplication'
