--- a/shop/build.gradle
+++ b/shop/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project (':models')
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'io.projectreactor:reactor-core:3.4.17'
     implementation 'org.webjars:bootstrap:5.1.3'
     implementation 'org.webjars:jquery:3.6.0'
 }
