--- a/pricer/build.gradle
+++ b/pricer/build.gradle
@@ -10,4 +10,26 @@ dependencies {
     implementation project (':models')
 }
 
-mainClassName = 'pricer.PriceApplication'
+
+ext {
+    javaMainClass = "com.ruppyrup.pricer.PriceApplication"
+}
+
+application {
+    mainClassName = javaMainClass
+}
+
+jar {
+    manifest {
+        attributes(
+                "Main-Class": javaMainClass
+        )
+    }
+}
+
+task runWithExecJarExecutable(type: Exec) {
+    dependsOn jar
+    group = "Execution"
+    description = "Run the output executable jar with ExecTask"
+    commandLine "java", "-jar", jar.archiveFile.get()
+}
